# csql

./: CMakeLists.txt  LICENSE  README.md  csql.ini
etc/: csql.ini  types.tsv
src/: browse.c  cmdline.c  code.c  cross.c  csql.c  database.c  editor.c  ewin.c  field.c  file.c  lite.c  log.c  main.c  map.c  sql.c  structure.c  tsv.c  var.c  window.c  winedit.c
